[tool.poetry]
name = "livre-db"
version = "0.1.0"
description = ""
authors = ["Caden Haustein <dev@cadenhaustein.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
beautifulsoup4 = "^4.11.0"
urllib3 = "^1.26.17"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"